# wdid

./: LICENSE  README.md  main.py  pyproject.toml
wdid/: cli.py
